model Animal {
  id String @id @default(uuid())

  name  String
  breed String

  age    Int   @default(0)
  weight Float @default(0)

  species SPECIES
  gender  Gender

  color         String?
  specialNeeds  String?
  medicalNotes  String?
  behaviorNotes String?

  complexityType ComplexityType @default(STANDARD)

  // Bonded Pair (Self Relation)
  bondedWithId String?
  bondedWith   Animal?  @relation("BondedPair", fields: [bondedWithId], references: [id], onDelete: SetNull)
  bondedBy     Animal[] @relation("BondedPair")

  // Current shelter
  shelterId String?
  shelter   Shelter? @relation(fields: [shelterId], references: [id], onDelete: SetNull)

  // File
  imageId  String?       @unique
  imageUrl String?
  image    FileInstance? @relation(fields: [imageId], references: [id], onDelete: SetNull)

  // Transports
  transports             Transport[]
  transportsAsBondedPair Transport[] @relation("BondedPair")

  // Health Reports
  healthReports HealthReport[]

  status Status @default(AT_SHELTER)

  // External Data Tracking (for CSV/API imports)
  externalAnimalId String?   @unique  // ID from external systems
  intakeType       String?            // e.g., "Stray", "Owner Surrender", "Transfer"
  intakeDate       DateTime?          // When animal entered shelter

  // Medical Readiness Fields
  medicalHoldFlag         Boolean          @default(false)
  quarantineStatus        QuarantineStatus @default(CLEARED)
  vaccinationsUpToDate    Boolean          @default(false)
  rabiesExpiration        DateTime?
  heartwormStatus         HeartwormStatus?
  specialNeedsFlag        Boolean          @default(false)
  clearedForTransport     Boolean          @default(false) // Auto-calculated

  // Priority Scoring
  priorityScore    Float    @default(0) // 0-100 scale
  lengthOfStayDays Int      @default(0) // Auto-calculated from intakeDate
  lastScoreUpdate  DateTime?

  // Crate size for transport optimization
  crateUnits Float @default(1) // Standard crate = 1, Large = 2, etc.

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("animals")
}

enum Status {
  ADOPTED
  AT_SHELTER
  IN_TRANSIT
}

enum QuarantineStatus {
  CLEARED
  QUARANTINE
  OBSERVATION
}

enum HeartwormStatus {
  NEGATIVE
  POSITIVE
  TREATMENT
  UNKNOWN
}
