model Driver {
  id String @id @default(uuid())

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  phone   String @unique
  state   String
  address String

  vehicleType       String
  vehicleCapacity   Int
  yearsOfExperience Int

  previousExperience String?

  // Operating Schedule (HH:mm format)
  startTime String @default("09:00")
  endTime   String @default("17:00")

  workingDays WorkingDay[]

  // Driver License
  driverLicenseId     String?        @unique
  driverLicenseUrl    String?
  driverLicense       FileInstance?  @relation("DriverLicense", fields: [driverLicenseId], references: [id], onDelete: SetNull)
  driverLicenseStatus ApprovalStatus @default(PENDING)

  // Vehicle Registration
  vehicleRegistrationId     String?        @unique
  vehicleRegistrationUrl    String?
  vehicleRegistration       FileInstance?  @relation("VehicleRegistration", fields: [vehicleRegistrationId], references: [id], onDelete: SetNull)
  vehicleRegistrationStatus ApprovalStatus @default(PENDING)

  // Animal Transport Certificate
  transportCertificateId     String?        @unique
  transportCertificateUrl    String?
  transportCertificate       FileInstance?  @relation("TransportCertificate", fields: [transportCertificateId], references: [id], onDelete: SetNull)
  transportCertificateStatus ApprovalStatus @default(PENDING)

  // Overall driver approval status
  status ApprovalStatus @default(PENDING)

  // Real-time tracking
  currentLatitude  Float?
  currentLongitude Float?
  lastLocationPing DateTime?

  // For payouts of transport charges
  stripeAccountId  String?          @unique
  onboardingStatus OnboardingStatus @default(NOT_STARTED)
  payoutEnabled    Boolean          @default(false)

  // Transports
  transports     Transport[]
  dailySchedules DailySchedule[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("drivers")
}
