model FileInstance {
  id String @id @default(uuid())

  filename         String
  originalFilename String
  path             String
  url              String
  fileType         FileType @default(any)
  mimeType         String
  size             Int

  user                 User?
  shelter              Shelter?
  driverLicense        Driver?          @relation("DriverLicense")
  vehicleRegistration  Driver?          @relation("VehicleRegistration")
  transportCertificate Driver?          @relation("TransportCertificate")
  tripAnimal           Animal?
  healthReports        HealthReport?
  vetDocuments         VetDocument?
  shelterDocuments     ShelterDocument?

  privateMessages PrivateMessage[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("file_instances")
}

enum FileType {
  image
  docs
  link
  document
  any
  video
  audio
}
