model Notification {
  id String @id @default(uuid())

  type    String
  title   String
  message String

  // Use JSON to store metadata
  meta Json

  users UserNotification[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("notifications")
}

model UserNotification {
  id String @id @default(uuid())

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String

  notification   Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)
  notificationId String

  read Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([userId, notificationId])
  @@map("user_notifications")
}

model NotificationSettings {
  id String @id @default(uuid())

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String @unique

  // Global settings (all users)
  emailNotifications Boolean @default(true)
  smsNotifications   Boolean @default(false)

  // Shelter admin / Manager / Vet
  certificateNotifications Boolean @default(false)
  appointmentNotifications Boolean @default(true)

  // Driver, Admin & Superadmin
  tripNotifications    Boolean @default(true)
  paymentNotifications Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("notification_settings")
}
