model PrivateConversation {
  id String @id @default(uuid())

  /// User who initiated the conversation
  initiatorId String
  initiator   User   @relation("ConversationInitiator", fields: [initiatorId], references: [id], onDelete: Cascade)

  /// User who received the conversation (Optional if chatting with a shelter)
  receiverId String?
  receiver   User?   @relation("ConversationReceiver", fields: [receiverId], references: [id], onDelete: Cascade)

  /// Shelter participating in the conversation (Optional if chatting with a user)
  shelterId String?
  shelter   Shelter? @relation("ShelterConversations", fields: [shelterId], references: [id], onDelete: Cascade)

  /// Conversation scope: MAIN for existing chat, TRANSPORT for ride-specific chat
  chatScope ConversationScope @default(MAIN)

  /// Transport relation for ride-specific chat (null for MAIN chat)
  transportId String?
  transport   Transport? @relation("TransportConversation", fields: [transportId], references: [id], onDelete: Cascade)

  messages PrivateMessage[]

  lastMessageId String?
  lastMessage   PrivateMessage? @relation("PrivateLastMessage", fields: [lastMessageId], references: [id], onDelete: SetNull)

  status ConversationStatus @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([chatScope, transportId])
  @@unique([initiatorId, receiverId, shelterId, chatScope, transportId])
  @@index([chatScope, updatedAt])
  @@map("private_conversations")
}

enum ConversationStatus {
  ACTIVE
  ARCHIVED
  BLOCKED
}

enum ConversationScope {
  MAIN
  TRANSPORT
}
