model Shelter {
  id String @id @default(uuid())

  name        String
  address     String?
  phone       String? @unique
  description String?

  logoId  String?       @unique
  logoUrl String?
  logo    FileInstance? @relation(fields: [logoId], references: [id], onDelete: SetNull)

  // Operating Schedule (HH:mm format)
  startTime String @default("09:00")
  endTime   String @default("17:00")

  workingDays WorkingDay[]

  status ApprovalStatus @default(PENDING)

  // For billing of transports charges
  stripeCustomerId String? @unique
  stripeDefaultPaymentMethodId String? @unique

  // Shelter-level admins and their team
  shelterAdmins User[] @relation("ShelterAdmins")
  managers      User[] @relation("Managers")

  // Animals in the shelter
  animals Animal[]

  // Shelter Documents
  shelterDocuments ShelterDocument[]

  // Transports
  transports Transport[]

  // Capacity Tracking
  totalKennels       Int   @default(0)
  openKennels        Int   @default(0)
  currentUtilization Float @default(0) // Percentage (0-100)

  // Intake Restrictions (JSON arrays)
  acceptsSpecies   String[] @default([]) // e.g., ["DOG", "CAT"]
  acceptsSizes     String[] @default([]) // e.g., ["SMALL", "MEDIUM", "LARGE"]
  acceptsBreeds    String[] @default([]) // Empty = accepts all
  restrictedBreeds String[] @default([]) // Breeds NOT accepted

  // External Feed Configurations
  externalFeedConfigs ExternalFeedConfig[]

  // Import Mappings
  importMappings ImportMapping[]

  // Transport Batches
  originBatches      TransportBatch[] @relation("OriginBatches")
  destinationBatches TransportBatch[] @relation("DestinationBatches")

  // Conversations (Shelter as a participant)
  conversations PrivateConversation[] @relation("ShelterConversations")

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("shelters")
}

model ShelterDocument {
  id String @id @default(uuid())

  name String
  type String

  shelterId String
  shelter   Shelter @relation(fields: [shelterId], references: [id], onDelete: Cascade)

  documentId  String       @unique
  documentUrl String
  document    FileInstance @relation(fields: [documentId], references: [id], onDelete: Cascade)

  status ApprovalStatus @default(PENDING)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("shelter_documents")
}
