model Transport {
  id String @id @default(uuid())

  transportNote String

  priorityLevel PriorityLevel

  pickUpLocation  String
  pickUpLatitude  Float
  pickUpLongitude Float

  dropOffLocation  String
  dropOffLatitude  Float
  dropOffLongitude Float

  transPortDate DateTime

  animalId String
  animal   Animal @relation(fields: [animalId], references: [id], onDelete: Cascade)

  isBondedPair Boolean @default(false)

  bondedPairId String?
  bondedPair   Animal? @relation("BondedPair", fields: [bondedPairId], references: [id], onDelete: SetNull)

  vetId String?
  vet   Veterinarian? @relation(fields: [vetId], references: [id], onDelete: SetNull)

  driverId String?
  driver   Driver? @relation(fields: [driverId], references: [id], onDelete: SetNull)

  shelterId String?
  shelter   Shelter? @relation(fields: [shelterId], references: [id], onDelete: SetNull)

  isVetClearanceRequired Boolean @default(false)

  vetClearanceType RequiredVetClearanceType @default(No)

  vetClearanceRequestId String?              @unique
  vetClearanceRequest   VetClearanceRequest? @relation(fields: [vetClearanceRequestId], references: [id], onDelete: SetNull)

  status TransportStatus @default(PENDING)

  pricingSnapshot PricingSnapshot?
  transaction     Transaction?

  transportTimelines TransportTimeline[]

  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @default(now()) @updatedAt
  acceptedAt DateTime?
  completedAt DateTime?

  @@map("transports")
}

enum PriorityLevel {
  LOW
  MEDIUM
  HIGH
}

enum TransportStatus {
  PENDING
  ACCEPTED
  CANCELLED
  PICKED_UP
  IN_TRANSIT
  COMPLETED
}

enum RequiredVetClearanceType {
  Health
  Vaccination
  Both
  No
}

model TransportTimeline {
  id String @id @default(uuid())

  transportId String
  transport   Transport @relation(fields: [transportId], references: [id], onDelete: Cascade)

  status TransportStatus

  note      String?
  latitude  Float?
  longitude Float?

  createdAt DateTime @default(now())

  @@index([transportId])
  @@map("transport_timelines")
}
