model User {
  id String @id @default(uuid())

  // Identity
  name     String @default("Unnamed User")
  email    String @unique
  password String // hashed password

  // Role & status
  role       UserRole
  status     UserStatus @default(ACTIVE)
  isVerified Boolean    @default(false)

  // Activity tracking
  lastLoginAt  DateTime?
  lastActiveAt DateTime?

  // Avatar
  profilePictureId  String?       @unique
  profilePictureUrl String?
  profilePicture    FileInstance? @relation(fields: [profilePictureId], references: [id], onDelete: SetNull)

  // Notifications
  notificationSettings NotificationSettings?
  notifications        UserNotification[]

  // Authentication
  refreshTokens RefreshToken[]
  otps          UserOtp[]

  // CHAT & CALL RELATIONS
  conversationsInitiated PrivateConversation[]  @relation("ConversationInitiator")
  conversationsReceived  PrivateConversation[]  @relation("ConversationReceiver")
  messagesSent           PrivateMessage[]
  messageStatuses        PrivateMessageStatus[]
  requestedImportJobs    ImportJob[]            @relation("ImportJobRequestedBy")
  operationEvents        OperationEvent[]

  // Shelter Association
  shelterAdminOfId String?
  shelterAdminOf   Shelter? @relation("ShelterAdmins", fields: [shelterAdminOfId], references: [id], onDelete: SetNull)

  managerOfId String?
  managerOf   Shelter? @relation("Managers", fields: [managerOfId], references: [id], onDelete: SetNull)

  // Driver
  drivers Driver?

  // Veterinarian
  veterinarians Veterinarian?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("users")
}

enum UserRole {
  // System-level roles
  SUPER_ADMIN
  ADMIN

  // Shelter-level roles
  SHELTER_ADMIN // manages MANAGERs in a shelter
  MANAGER // managed by shelter admin

  // Vet
  VETERINARIAN

  // Driver
  DRIVER
}

enum UserStatus {
  ACTIVE
  INACTIVE
  DELETED
}
