model Veterinarian {
  id String @id @default(uuid())

  phone       String? @unique
  license     String? @unique
  description String?

  // Operating Schedule (HH:mm format)
  startTime String @default("09:00")
  endTime   String @default("17:00")

  workingDays WorkingDay[]

  // Vet Clearance
  vetClearanceRequests VetClearanceRequest[]
  vetAppointments      VetAppointment[]

  // Health Reports
  healthReports HealthReport[]

  // Vet Documents
  vetDocuments VetDocument[]

  // Assigned Transports
  transports     Transport[]
  dailySchedules DailySchedule[]

  status ApprovalStatus @default(PENDING)

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("veterinarians")
}

model VetDocument {
  id String @id @default(uuid())

  name String
  type String

  vetId String
  vet   Veterinarian @relation(fields: [vetId], references: [id], onDelete: Cascade)

  documentId  String       @unique
  documentUrl String
  document    FileInstance @relation(fields: [documentId], references: [id], onDelete: Cascade)

  status ApprovalStatus @default(PENDING)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@map("vet_documents")
}
